--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,6 +1,7 @@
 <ul>
   <% @artists.each do |artist| %>
-  <li><%= link_to artist.name, artist_path(artist) %><li>
+  <li><%= link_to artist.name, artist_path(artist) %> <%=artist.songs.count%> song<li>
+
     <%end%>
 
 </ul>
